tests/paczka1/fuzzy1/23995194.err
Error in line 13: To25TÅONc S891 26,1
Error in line 16: A139 A785 77,4
Error in line 10: WuPb4K A792 136,3
Error in line 19: WuPb4K A139 37,6
Error in line 21: ezyt A139 124,1
